Styles/style.css
/* ... */
@media (min-width: 23.4375em) {
  .container {
    padding: 0 5rem;
  }
}

.btn {
  font-size: 1rem;
  display: inline-block;
  padding: 1rem 2rem;
  background-color: #eee;
  color: #242424;
  border-radius: 5px;
  margin: 1rem;
  -webkit-box-shadow: 0 4px 9px 5px rgba(0, 0, 0, 0.2);
          box-shadow: 0 4px 9px 5px rgba(0, 0, 0, 0.2);
}

@media (min-width: 45em) {
  .btn {
    font-size: 1.6rem;
  }
}

.btn:hover {
  -webkit-filter: brightness(110%);
          filter: brightness(110%);
}

.no-scroll {
  overflow-y: hidden;
}

.header {
  padding: 0 5rem;
  padding-top: 2rem;
  padding-bottom: 5rem;
  position: relative;
}

@media (min-width: 64em) {
  .header {
    text-align: left;
  }
}

.header .overlay {
  opacity: 1;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: rgba(37, 43, 70, 0.877);
  z-index: 10;
}

.nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 1rem;
}

.nav__logo {
  z-index: 100;
}

.nav__logo .logo--icon {
  display: inline-block;
  height: 100%;
  background-repeat: no-repeat;
  width: 18rem;
  height: 3rem;
  background-image: url("../images/logo-bookmark.svg");
}

.nav__links {
  display: none;
}

@media (min-width: 45em) {
  .nav__links {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.nav__links a {
  margin: 0 2rem;
  font-size: 1.5rem;
  letter-spacing: 1.5px;
}

.nav__links .btn {
  background-color: #fa5757;
  color: #fff;
  -webkit-box-shadow: none;
          box-shadow: none;
}

.nav__links--mob {
  text-align: center;
  margin-top: 10rem;
  margin-left: 2rem;
  margin-right: 2rem;
}

.nav__links--mob a {
  color: #efefee;
  text-transform: uppercase;
  display: block;
  padding: 4rem 0;
  border-bottom: .5px solid #eee;
}

.nav__links--mob a:first-child {
  border-top: .5px solid #eee;
}

.nav__links--mob a:hover {
  color: #fff;
}

.nav .bars {
  background-image: url("../images/icon-hamburger.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  height: 2rem;
  width: 2rem;
  margin-bottom: 1.5rem;
  z-index: 100;
}

@media (min-width: 45em) {
  .nav .bars {
    display: none;
  }
}

.nav .bars.close {
  background-image: url("../images/icon-close.svg");
}

.hero {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: reverse;
      -ms-flex-direction: column-reverse;
          flex-direction: column-reverse;
  margin-bottom: 10rem;
}

@media (min-width: 64em) {
  .hero {
    padding: 0 5rem;
  }
}

@media (min-width: 64em) {
  .hero .hero__container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.hero__text {
  font-size: 400;
}

@media (min-width: 64em) {
  .hero__text {
    text-align: left;
    width: 65rem;
  }
}

.hero__text h1 {
  margin-bottom: 3rem;
}

.hero__text p {
  margin-bottom: 2rem;
}

@media (min-width: 45em) {
  .hero__text p {
    padding: 0 10rem;
  }
}

@media (min-width: 64em) {
  .hero__text p {
    padding: 0 5rem;
    padding-left: 0;
  }
}

.hero__text .btn-blue {
  background-color: #5368df;
  color: #fff;
}

.hero__image {
  position: relative;
  background-image: url("../images/illustration-hero.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  min-height: 25rem;
  min-width: 30rem;
  margin-bottom: 10rem;
}

@media (min-width: 45em) {
  .hero__image {
    min-height: 35rem;
    min-width: 50rem;
  }
}

.hero__image::before {
  content: "";
  position: absolute;
  min-height: 25rem;
  min-width: 30rem;
  width: 100%;
  background-color: #5368df;
  z-index: -1;
  border-bottom-left-radius: 100px;
  bottom: -25px;
  left: 40%;
}

@media (min-width: 45em) {
  .hero__image::before {
    min-height: 35rem;
    min-width: 50rem;
  }
}

.features {
  margin-bottom: 10rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

@media (min-width: 45em) {
  .features {
    margin-bottom: 20rem;
  }
}

.features__text {
  margin-bottom: 5rem;
}

.features__text h1 {
  margin-bottom: 3rem;
}

@media (min-width: 45em) {
  .features__text p {
    padding: 0 10rem;
  }
}

@media (min-width: 64em) {
  .features__text p {
    padding: 0 20rem;
  }
}

.features__link {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin-bottom: 10rem;
}

@media (min-width: 64em) {
  .features__link {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
}

.features__link span {
  position: relative;
  padding: 2rem 2rem;
  border-bottom: 1px solid #9194a1;
}

@media (min-width: 64em) {
  .features__link span {
    border-bottom: none;
  }
}
/* ... */

